--- a/常用代码.md
+++ b/常用代码.md
@@ -20,3 +20,91 @@ public class Singleton {
     }
 }
 ```
+
+## 快速排序`partition`过程
+
+### 方法一
+
+```python
+def partition(array, low, high):
+    pivot = array[low]
+    while low < high:
+        while low < high and array[high] >= pivot:
+            high -= 1
+        array[low] = array[high]
+        while low < high and array[low] <= pivot:
+            low += 1
+        array[high] = array[low]
+    array[low] = pivot
+    return low
+```
+
+### 方法二
+
+```python
+def partition2(array, low, high):
+    def swap(array, i, j):
+        array[i], array[j] = array[j], array[i]
+
+    pivot = array[high]
+    current = low
+    for i in range(low, high):
+        if array[i] < pivot:
+            swap(array, i, current)
+            current += 1
+    swap(array, high, current)
+    return current
+```
+
+### 方法三
+
+```python
+def partition3(array, low, high):
+    def swap(array, i, j):
+        array[i], array[j] = array[j], array[i]
+
+    start = low
+    pivot = array[low]
+    low += 1
+    while low <= high:
+        while low <= high and array[low] <= pivot:
+            low += 1
+        while low <= high and array[high] >= pivot:
+            high -= 1
+        if low < high:
+            swap(array, low, high)
+    swap(array, start, high)
+    return high
+```
+
+## 快速排序
+
+### 递归
+
+```python
+def quick_sort(array, low, high):
+    if low >= high:
+        return
+    mid = partition(array, low, high)
+    quick_sort(array, low, mid - 1)
+    quick_sort(array, mid + 1, high)
+```
+
+### 非递归
+
+```python
+def quick_sort(array, low, high):
+    stack = []
+    stack.append(low)
+    stack.append(high)
+    while stack:
+        high = stack.pop()
+        low = stack.pop()
+        if low >= high:
+            continue
+        mid = partition(array, low, high)
+        stack.append(low)
+        stack.append(mid - 1)
+        stack.append(mid + 1)
+        stack.append(high)
+```
