增加插入排序、冒泡排序、选择排序、归并排序和堆排序

--- a/常用代码.md
+++ b/常用代码.md
@@ -108,3 +108,157 @@ def quick_sort(array, low, high):
         stack.append(mid + 1)
         stack.append(high)
 ```
+
+## 插入排序
+
+```python
+def insertion_sort(array):
+    for i in range(1, len(array)):
+        temp = array[i]
+        j = i - 1
+        while j >= 0 and temp < array[j]:
+            array[j + 1] = array[j]
+            j -= 1
+        array[j + 1] = temp
+```
+
+## 冒泡排序
+
+```python
+def bubble_sort(array):
+    def swap(array, i, j):
+        array[i], array[j] = array[j], array[i]
+
+    for j in range(len(array) - 1, 0, -1):
+        flag = True
+        for i in range(0, j):
+            if array[i] > array[i + 1]:
+                swap(array, i, i + 1)
+                flag = False
+        if flag:
+            break
+```
+
+## 选择排序
+
+```python
+def selection_sort(array):
+    def swap(array, i, j):
+        array[i], array[j] = array[j], array[i]
+
+    for i in range(0, len(array) - 1):
+        min_index = i
+        for j in range(i + 1, len(array)):
+            if array[j] < array[min_index]:
+                min_index = j
+        swap(array, i, min_index)
+```
+
+## 归并排序
+
+### 递归
+
+```python
+def merge(array, temp_array, low, mid, high):
+    start1 = low
+    end1 = mid
+    start2 = mid
+    end2 = high
+    k = low
+    while start1 < end1 and start2 < end2:
+        if array[start1] < array[start2]:
+            temp_array[k] = array[start1]
+            start1 += 1
+        else:
+            temp_array[k] = array[start2]
+            start2 += 1
+        k += 1
+    while start1 < end1:
+        temp_array[k] = array[start1]
+        start1 += 1
+        k += 1
+    while start2 < end2:
+        temp_array[k] = array[start2]
+        start2 += 1
+        k += 1
+    for k in range(low, high):
+        array[k] = temp_array[k]
+
+
+def merge_sort(array, temp_array, low, high):
+    if low >= high:
+        return
+    mid = (low + high) // 2
+    merge_sort(array, temp_array, low, mid)
+    merge_sort(array, temp_array, mid + 1, high)
+    merge(array, temp_array, low, mid, high)
+```
+
+### 非递归
+
+```python
+def merge_sort(array):
+    length = len(array)
+    temp_array = [0] * length
+    block = 1
+    while block < length * 2:
+        for start in range(0, length, 2 * block):
+            low = start
+            mid = (start + block) if (start + block) < length else length
+            high = (start + 2 * block) if (start + 2 * block) < length else length
+            start1 = low
+            end1 = mid
+            start2 = mid
+            end2 = high
+            k = low
+            while start1 < end1 and start2 < end2:
+                if array[start1] < array[start2]:
+                    temp_array[k] = array[start1]
+                    start1 += 1
+                else:
+                    temp_array[k] = array[start2]
+                    start2 += 1
+                k += 1
+            while start1 < end1:
+                temp_array[k] = array[start1]
+                start1 += 1
+                k += 1
+            while start2 < end2:
+                temp_array[k] = array[start2]
+                start2 += 1
+                k += 1
+        array, temp_array = temp_array, array
+        block *= 2
+```
+
+## 堆排序
+
+```python
+def heap_sort(array):
+    def swap(array, i, j):
+        array[i], array[j] = array[j], array[i]
+
+    def shift_down(start, end):
+        root = start
+        while True:
+            child = 2 * root + 1
+            if child > end:
+                break
+            if child + 1 <= end and array[child] < array[child + 1]:
+                child += 1
+            if array[root] < array[child]:
+                swap(array, root, child)
+                root = child
+            else:
+                break
+
+    def build_heap(array):
+        length = len(array)
+        for start in range((length - 1) // 2, -1, -1):
+            shift_down(start, length - 1)
+
+    build_heap(array)
+    for end in range(len(array) - 1, 0, -1):
+        swap(array, 0, end)
+        shift_down(0, end - 1)
+```
