增加反转链表，二叉树的前序、中序、后序和层次遍历

--- a/常用代码.md
+++ b/常用代码.md
@@ -262,3 +262,122 @@ def heap_sort(array):
         swap(array, 0, end)
         shift_down(0, end - 1)
 ```
+
+## 反转链表（头插法）
+
+```python
+def reverse_list(head):
+    if not head:
+        return head
+    new_head = head
+    while head.next:
+        current = head.next
+        head.next = head.next.next
+        current.next = new_head
+        new_head = current
+    return new_head
+```
+
+## 二叉树前序遍历
+
+### 递归
+
+```python
+def pre_order(root):
+    if root:
+        print(root.val)
+        pre_order(root.left)
+        pre_order(root.right)
+```
+
+### 非递归
+
+```python
+def pre_order(root):
+    stack = []
+    while root or stack:
+        if root:
+            print(root.val)
+            stack.append(root)
+            root = root.left
+        else:
+            node = stack.pop()
+            root = node.right
+```
+
+## 二叉树中序遍历
+
+### 递归
+
+```python
+def in_order(root):
+    if root:
+        in_order(root.left)
+        print(root.val)
+        in_order(root.right)
+```
+
+### 非递归
+
+```python
+def in_order(root):
+    stack = []
+    while root or stack:
+        if root:
+            stack.append(root)
+            root = root.left
+        else:
+            node = stack.pop()
+            print(node.val)
+            root = node.right
+```
+
+## 二叉树后序遍历
+
+### 递归
+
+```python
+def post_order(root):
+    if root:
+        post_order(root.left)
+        post_order(root.right)
+        print(root.val)
+```
+
+### 非递归
+
+```python
+def post_order(root):
+    stack = []
+    result = []
+    node = root
+    while node or stack:
+        if node:
+            stack.append(node)
+            result.append(node.val)
+            node = node.right
+        else:
+            node = stack.pop()
+            node = node.left
+    result.reverse()
+    return result
+```
+
+## 二叉树层次遍历
+
+```python
+def level_order(root):
+    if not root:
+        return
+    queue = collections.deque()
+    queue.append(root)
+    while queue:
+        size = len(queue)
+        for i in range(size):
+            node = queue.popleft()
+            print(node.val)
+            if node.left:
+                queue.append(node.left)
+            if node.right:
+                queue.append(node.right)
+```
