增加Dijkstra算法和Floyd-Warshall算法

--- a/常用代码.md
+++ b/常用代码.md
@@ -381,3 +381,89 @@ def level_order(root):
             if node.right:
                 queue.append(node.right)
 ```
+
+## Dijkstra算法
+
+### 朴素
+
+```python
+def dijkstra(start, end, graph, n):
+    """
+    :param start: int, [1,n]
+    :param end: int, [1,n]
+    :param graph: dict, {from: (to, distance), from: (to, distance)...}
+    :param n: int
+    :return: (int, list), minimum distance, path
+    """
+    d = [sys.maxsize] * (n + 1)
+    previous = [None] * (n + 1)
+    d[start] = 0
+    candidates = set(i for i in range(1, n + 1))
+    while candidates:
+        min_d = sys.maxsize
+        u = -1
+        for candidate in candidates:
+            if min_d > d[candidate]:
+                min_d = d[candidate]
+                u = candidate
+        if u == end:
+            return d[u], previous
+        candidates.remove(u)
+        for v, dist in graph[u]:
+            if d[v] > d[u] + dist:
+                d[v] = d[u] + dist
+                previous[v] = u
+```
+
+### 堆优化
+
+```python
+def dijkstra(start, end, graph, n):
+    """
+    :param start: int, [1,n]
+    :param end: int, [1,n]
+    :param graph: dict, {from: (to, distance), from: (to, distance)...}
+    :param n: int
+    :return: (int, list), minimum distance, path
+    """
+    d = [sys.maxsize] * (n + 1)
+    previous = [None] * (n + 1)
+    d[start] = 0
+    candidates = set(i for i in range(1, n + 1))
+    heap = []
+    heapq.heappush(heap, (0, start))
+    while candidates:
+        distance, u = heapq.heappop()
+        if u == end:
+            return d[u], previous
+        if u not in candidates:
+            continue
+        candidates.remove(u)
+        for v, dist in graph[u]:
+            if d[v] > d[u] + dist:
+                d[v] = d[u] + dist
+                heapq.heappush(heap, (d[v], v))
+                previous[v] = u
+```
+
+## Floyd-Warshall算法
+
+```python
+def floyd_warshall(graph, n):
+    INF = 10000
+    dist = [[INF] * n for _ in range(n)]
+    path = [[-1] * n for _ in range(n)]
+    for i in range(n):
+        for j in range(n):
+            if i == j:
+                dist[i][j] = 0
+            elif graph[i][j] < INF:
+                dist[i][j] = graph[i][j]
+    for k in range(n):
+        for i in range(n):
+            for j in range(n):
+                if dist[i][j] > dist[i][k] + dist[k][j]:
+                    dist[i][j] = dist[i][k] + dist[k][j]
+                    path[i][j] = k
+    return dist, path
+```
