增加拓扑排序和二分搜索

--- a/常用代码.md
+++ b/常用代码.md
@@ -467,3 +467,76 @@ def floyd_warshall(graph, n):
                     path[i][j] = k
     return dist, path
 ```
+
+## 拓扑排序
+
+### DFS
+
+```python
+def topological_sort(graph, n):
+    order = []
+    visiting = [False] * n
+    visited = [False] * n
+    for i in range(n):
+        if not visited[i]:
+            if not dfs(graph, i, visiting, visited, order):
+                raise ValueError('cycle')
+    order.reverse()
+    return order
+
+
+def dfs(graph, index, visiting, visited, order):
+    visiting[index] = True
+    visited[index] = True
+    for neighbor in graph[index]:
+        if visiting[neighbor]:
+            return False
+        if not visited[neighbor]:
+            if not dfs(graph, neighbor, visiting, visited, order):
+                return False
+    order.append(index)
+    visiting[index] = False
+    return True
+```
+
+### BFS
+
+```python
+def topological_sort(graph, n):
+    in_degrees = [0] * n
+    for i in range(n):
+        for index in graph[i]:
+            in_degrees[index] += 1
+    candidates = set()
+    for i in range(n):
+        if in_degrees[i] == 0:
+            candidates.add(i)
+    order = []
+    while candidates:
+        index = candidates.pop()
+        order.append(index)
+        for neighbor in graph[index]:
+            in_degrees[neighbor] -= 1
+            if in_degrees[neighbor] == 0:
+                candidates.add(neighbor)
+    if len(order) != n:
+        raise ValueError('cycle')
+    return order
+```
+
+## 二分搜索
+
+```python
+def binary_search(array, key):
+    low = 0
+    high = len(array) - 1
+    while low <= high:
+        mid = (low + high) // 2
+        if array[mid] == key:
+            return mid
+        elif array[mid] > key:
+            high = mid - 1
+        else:
+            low = mid + 1
+    return -1
+```
