增加并查集、生产者——消费者模型、LRU和LFU

--- a/常用代码.md
+++ b/常用代码.md
@@ -540,3 +540,289 @@ def binary_search(array, key):
             low = mid + 1
     return -1
 ```
+
+## 并查集
+
+```python
+class UnionFind:
+    def __init__(self, n):
+        self.count = n
+        self.parent = [i for i in range(n)]
+        self.rank = [0] * n
+
+    def find(self, num):
+        if num != self.parent[num]:
+            self.parent[num] = self.find(self.parent[num])
+        return self.parent[num]
+
+    def union(self, a, b):
+        parent_a = self.find(a)
+        parent_b = self.find(b)
+        if parent_a == parent_b:
+            return
+        if self.rank[parent_a] > self.rank[parent_b]:
+            self.parent[parent_b] = parent_a
+        else:
+            self.parent[parent_a] = parent_b
+            if self.rank[parent_a] == self.rank[parent_b]:
+                self.rank[parent_b] += 1
+        self.count -= 1
+```
+
+## 生产者----消费者模型
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Queue<Integer> queue = new LinkedList<>();
+        int maxSize = 10;
+        Thread producer1 = new Producer(queue, maxSize, "Producer 1");
+        Thread producer2 = new Producer(queue, maxSize, "Producer 2");
+        Thread consumer1 = new Consumer(queue, "Consumer 1");
+        Thread consumer2 = new Consumer(queue, "Consumer 2");
+
+        producer1.start();
+        consumer1.start();
+        producer2.start();
+        consumer2.start();
+    }
+
+    static class Producer extends Thread {
+        Queue<Integer> queue;
+        int maxSize;
+        Random random;
+
+        public Producer(Queue<Integer> queue, int maxSize, String name) {
+            super(name);
+            this.queue = queue;
+            this.maxSize = maxSize;
+            random = new Random();
+        }
+
+        @Override
+        public void run() {
+            while (true) {
+                try {
+                    produce();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+
+        void produce() throws InterruptedException {
+            synchronized (queue) {
+                while (queue.size() == maxSize) {
+                    System.out.println("Queue is full, " + this.getName() + " is waiting");
+                    queue.wait();
+                }
+                int item = random.nextInt();
+                queue.add(item);
+                System.out.println(this.getName() + " produced " + item + ", queue size is " + queue.size() + " now");
+                queue.notifyAll();
+                Thread.sleep(new Random().nextInt(1000));
+            }
+        }
+    }
+
+    static class Consumer extends Thread {
+        Queue<Integer> queue;
+        Random random;
+
+        public Consumer(Queue<Integer> queue, String name) {
+            super(name);
+            this.queue = queue;
+            random = new Random();
+        }
+
+        @Override
+        public void run() {
+            while (true) {
+                try {
+                    consume();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+
+        void consume() throws InterruptedException {
+            synchronized (queue) {
+                while (queue.isEmpty()) {
+                    System.out.println("Queue is empty, " + this.getName() + " is waiting");
+                    queue.wait();
+                }
+                int item = queue.remove();
+                System.out.println(this.getName() + " consumed " + item + ", queue size is " + queue.size() + " now");
+                queue.notifyAll();
+                Thread.sleep(new Random().nextInt(1000));
+            }
+        }
+    }
+}
+```
+
+## LRU
+
+```python
+class LRUCache:
+    class Node:
+        def __init__(self, key, value):
+            self.key = key
+            self.val = value
+            self.prev = None
+            self.next = None
+
+    def __init__(self, capacity):
+        """
+        :type capacity: int
+        """
+        self.capacity = capacity
+        self.memory = {}
+        self.head = self.Node(-1, -1)
+        self.tail = self.Node(-1, -1)
+        self.head.next = self.tail
+        self.tail.prev = self.head
+
+    def get(self, key):
+        """
+        :type key: int
+        :rtype: int
+        """
+        if key not in self.memory:
+            return -1
+        node = self.memory[key]
+        self.to_head(node)
+        return node.val
+
+    def put(self, key, value):
+        """
+        :type key: int
+        :type value: int
+        :rtype: void
+        """
+        if key in self.memory:
+            node = self.memory[key]
+            node.val = value
+            self.to_head(node)
+        else:
+            if len(self.memory) == self.capacity:
+                del self.memory[self.tail.prev.key]
+                self.remove(self.tail.prev)
+            node = self.Node(key, value)
+            self.memory[key] = node
+            self.add(node)
+
+    def to_head(self, node):
+        self.remove(node)
+        self.add(node)
+
+    def remove(self, node):
+        node.prev.next = node.next
+        node.next.prev = node.prev
+
+    def add(self, node):
+        node.next = self.head.next
+        self.head.next = node
+        node.prev = self.head
+        node.next.prev = node
+```
+
+## LFU
+
+```python
+class LFUCache:
+    class Node:
+        def __init__(self, key, value, times):
+            self.key = key
+            self.value = value
+            self.times = times
+            self.prev = None
+            self.next = None
+
+    def __init__(self, capacity):
+        """
+        :type capacity: int
+        """
+        self.init_capacity = capacity
+        self.capacity = capacity
+        self.memory_nodes = {}
+        self.memory_times = {}
+        self.head = self.Node(-1, -1, -1)
+        self.tail = self.Node(-1, -1, -1)
+        self.head.next = self.tail
+        self.tail.prev = self.head
+
+    def get(self, key):
+        """
+        :type key: int
+        :rtype: int
+        """
+        if key not in self.memory_nodes:
+            return -1
+        self.put(key, self.memory_nodes[key].value)
+        return self.memory_nodes[key].value
+
+    def put(self, key, value):
+        """
+        :type key: int
+        :type value: int
+        :rtype: void
+        """
+        if self.init_capacity == 0:
+            return
+        if key in self.memory_nodes:
+            node = self.memory_nodes[key]
+            node.value = value
+
+            if node.times + 1 in self.memory_times:
+                if self.memory_times[node.times] == node:
+                    if node.next.times == node.times:
+                        self.memory_times[node.times] = node.next
+                    else:
+                        del self.memory_times[node.times]
+                node.prev.next = node.next
+                node.next.prev = node.prev
+                node.prev = self.memory_times[node.times + 1].prev
+                node.next = self.memory_times[node.times + 1]
+                node.next.prev = node
+                node.prev.next = node
+                self.memory_times[node.times + 1] = node
+            else:
+                if self.memory_times[node.times] != node:
+                    node.prev.next = node.next
+                    node.next.prev = node.prev
+                    node.prev = self.memory_times[node.times].prev
+                    node.next = self.memory_times[node.times]
+                    node.next.prev = node
+                    node.prev.next = node
+                else:
+                    if node.next.times == node.times:
+                        self.memory_times[node.times] = node.next
+                    else:
+                        del self.memory_times[node.times]
+                self.memory_times[node.times + 1] = node
+            node.times += 1
+        else:
+            node = self.Node(key, value, 1)
+            self.memory_nodes[key] = node
+            if self.capacity == 0:
+                node_to_remove = self.tail.prev
+                if self.memory_times[node_to_remove.times] == node_to_remove:
+                    del self.memory_times[node_to_remove.times]
+                node_to_remove.prev.next = node_to_remove.next
+                node_to_remove.next.prev = node_to_remove.prev
+                del self.memory_nodes[node_to_remove.key]
+                self.capacity += 1
+            if 1 in self.memory_times:
+                node.prev = self.memory_times[1].prev
+                node.next = self.memory_times[1]
+
+            else:
+                node.prev = self.tail.prev
+                node.next = self.tail
+            node.next.prev = node
+            node.prev.next = node
+            self.memory_times[1] = node
+            self.capacity -= 1
+```
