--- a/常用代码.md
+++ b/常用代码.md
@@ -1,4 +1,4 @@
-# 常用代码
+# 设计模式
 
 ## 单例模式
 
@@ -20,6 +20,8 @@ public class Singleton {
     }
 }
 ```
+
+# 排序
 
 ## 快速排序`partition`过程
 
@@ -263,6 +265,8 @@ def heap_sort(array):
         shift_down(0, end - 1)
 ```
 
+# 链表
+
 ## 反转链表（头插法）
 
 ```python
@@ -277,6 +281,8 @@ def reverse_list(head):
         new_head = current
     return new_head
 ```
+
+# 二叉树遍历
 
 ## 二叉树前序遍历
 
@@ -381,6 +387,8 @@ def level_order(root):
             if node.right:
                 queue.append(node.right)
 ```
+
+# 图
 
 ## Dijkstra算法
 
@@ -524,6 +532,8 @@ def topological_sort(graph, n):
     return order
 ```
 
+# 查找
+
 ## 二分搜索
 
 ```python
@@ -568,6 +578,8 @@ class UnionFind:
                 self.rank[parent_b] += 1
         self.count -= 1
 ```
+
+# 同步问题
 
 ## 生产者----消费者模型
 
@@ -661,6 +673,8 @@ public class Main {
     }
 }
 ```
+
+# 缓存策略
 
 ## LRU
 
