增加Trie树、N皇后问题、栈模拟队列和队列模拟栈

--- a/常用代码.md
+++ b/常用代码.md
@@ -579,6 +579,170 @@ class UnionFind:
         self.count -= 1
 ```
 
+## Trie树
+
+```java
+public class Trie {
+    TrieNode root;
+
+    class TrieNode {
+        boolean isWord = false;
+        char val;
+        TrieNode[] children = new TrieNode[26];
+    }
+
+    public Trie() {
+        root = new TrieNode();
+    }
+
+    public void insert(String word) {
+        TrieNode current = root;
+        for (char letter : word.toCharArray()) {
+            if (current.children[letter - 'a'] == null) {
+                current.children[letter - 'a'] = new TrieNode();
+                current.children[letter - 'a'].val = letter;
+            }
+            current = current.children[letter - 'a'];
+        }
+        current.isWord = true;
+    }
+
+    public boolean search(String word) {
+        TrieNode current = root;
+        for (char letter : word.toCharArray()) {
+            if (current.children[letter - 'a'] == null) {
+                return false;
+            }
+            current = current.children[letter - 'a'];
+        }
+        return current.isWord;
+    }
+
+    public boolean startsWith(String prefix) {
+        TrieNode current = root;
+        for (char letter : prefix.toCharArray()) {
+            if (current.children[letter - 'a'] == null) {
+                return false;
+            }
+            current = current.children[letter - 'a'];
+        }
+        return true;
+    }
+}
+```
+
+# 回溯
+
+## N皇后问题
+
+```python
+def n_queens(n):
+    """
+    :type n: int
+    :rtype: List[List[str]]
+    """
+    board = [['.'] * n for _ in range(n)]
+    result = []
+    back_trace(board, 0, result)
+    return result
+
+
+def back_trace(board, row_index, result):
+    if row_index == len(board):
+        result.append(convert(board))
+        return
+    for j in range(len(board[row_index])):
+        if is_valid(board, row_index, j):
+            board[row_index][j] = 'Q'
+            back_trace(board, row_index + 1, result)
+            board[row_index][j] = '.'
+
+
+def convert(board):
+    return [''.join(row) for row in board]
+
+
+def is_valid(board, i, j):
+    for x in range(i):
+        for y in range(len(board[i])):
+            if board[x][y] == 'Q' and (y == j or i - x == j - y or i - x == y - j):
+                return False
+    return True
+```
+
+# 栈与队列
+
+## 栈模拟队列
+
+```java
+public class MyQueue {
+    Stack<Integer> stackA;
+    Stack<Integer> stackB;
+
+    public MyQueue() {
+        stackA = new Stack<>();
+        stackB = new Stack<>();
+    }
+
+    public void push(int x) {
+        stackA.add(x);
+    }
+
+    public int pop() {
+        if (stackB.empty()) {
+            while (!stackA.empty()) {
+                stackB.add(stackA.pop());
+            }
+        }
+        return stackB.pop();
+    }
+
+    public int peek() {
+        if (stackB.empty()) {
+            while (!stackA.empty()) {
+                stackB.add(stackA.pop());
+            }
+        }
+        return stackB.peek();
+    }
+
+    public boolean empty() {
+        return stackA.empty() && stackB.empty();
+    }
+}
+```
+
+## 队列模拟栈
+
+```java
+public class MyStack {
+    Queue<Integer> queue;
+
+    public MyStack() {
+        queue = new LinkedList<>();
+    }
+
+    public void push(int x) {
+        queue.add(x);
+        for (int i = 0; i < queue.size() - 1; i++) {
+            queue.add(queue.poll());
+        }
+    }
+
+    public int pop() {
+        return queue.poll();
+    }
+
+    public int top() {
+        return queue.peek();
+    }
+
+    public boolean empty() {
+        return queue.isEmpty();
+    }
+}
+```
+
 # 同步问题
 
 ## 生产者----消费者模型
