--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -120,19 +120,19 @@ HTTP/<major>.<minor>
 
 对请求进行质询／响应认证。
 
-|       首部      |                      描述                      |
-| :-----------: | :------------------------------------------: |
-| Authorization |          包含了客户端提供给服务器，以便对其自身进行认证的数据          |
-|     Cookie    | 客户端用它向服务器传送一个令牌-------它并不是真正的安全首部，但确实隐含了安全功能 |
-|    Cookie2    |              用来说明请求端支持的cookies版本             |
+|       首部      |                    描述                   |
+| :-----------: | :-------------------------------------: |
+| Authorization |        包含了客户端提供给服务器，以便对其自身进行认证的数据       |
+|     Cookie    | 客户端用它向服务器传送一个令牌——它并不是真正的安全首部，但确实隐含了安全功能 |
+|    Cookie2    |           用来说明请求端支持的cookies版本           |
 
 ###### 代理请求首部
 
-|          首部         |                       描述                      |
-| :-----------------: | :-------------------------------------------: |
+|          首部         |                        描述                       |
+| :-----------------: | :---------------------------------------------: |
 |     Max-Forward     | 在通往源端服务器的路径上，将请求转发给其他代理或网关的最大次数——与TRACE方法一起使用 |
-| Proxy-Authorization |   与Authorization首部相同，但这个首部实在与代理进行认证的时候后使用的　   |
-|   Proxy-Connection  |       与Connection首部相同，但这个首部是在与代理建立连接时使用的      |
+| Proxy-Authorization |     与Authorization首部相同，但这个首部实在与代理进行认证的时候后使用的    |
+|   Proxy-Connection  |        与Connection首部相同，但这个首部是在与代理建立连接时使用的       |
 
 ##### 响应首部
 
@@ -252,7 +252,5 @@ HTTP/<major>.<minor>
 [http_request_message]: http_request_message.png
 
 [http_response_message]: http_response_message.png
-
-[tcp_communication]: tcp_communication.png
 
 [tcp_communication]: tcp_communication.png
