增加方法参数校验情况、版本号命名方式

--- a/其他/其他.md
+++ b/其他/其他.md
@@ -21,6 +21,30 @@
 
 [Licenses | Choose a License][choose_a_license]
 
+## 方法中什么时候需要进行参数校验，什么时候不需要
+
+需要进行参数校验的场景：
+
+- 调用频次低的方法。
+- 执行时间开销很大的方法，参数校验时间几乎可以忽略不计。
+- 需要极高稳定性和可用性的方法。
+- 对外提供的开放接口。
+
+不需要进行参数校验的场景：
+
+- 极有可能被循环调用的方法。
+- 底层方法（调用频率高，且不太可能出错）。
+- 被声明为private，只会被自己代码调用的方法。
+
+## 版本号命名方式
+
+版本格式：主版本号.次版本号.修订号
+
+规则：
+1\. 主版本号：当做了不兼容的API修改。
+2\. 次版本号：当做了向下兼容的功能性新增。
+3\. 修订号：当做了向下兼容的问题修正。
+
 [choose_a_license]: https://choosealicense.com/licenses/
 
 [free_software_licenses]: free_software_licenses.png
