加入二叉搜索树、AVL树和红黑树的复杂度、红黑树的性质、图的基本术语

--- a/数据结构.md
+++ b/数据结构.md
@@ -11,3 +11,34 @@
 |   堆排序  |  O(nlogn) |  O(nlogn) |  O(nlogn) |   O(1)   |   否  |
 | 二路归并排序 |  O(nlogn) |  O(nlogn) |  O(nlogn) |   O(n)   |   是  |
 |  基数排序  | O(d(n+r)) | O(d(n+r)) | O(d(n+r)) |   O(r)   |   是  |
+
+## 二叉搜索树、AVL树和红黑树的复杂度
+
+|  树种类  |  空间  |  空间  |    查找   |    查找   |    插入   |    插入   |    删除   |    删除   |
+| :---: | :--: | :--: | :-----: | :-----: | :-----: | :-----: | :-----: | :-----: |
+|       |  平均  |  最坏  |    平均   |    最坏   |    平均   |    最坏   |    平均   |    最坏   |
+| 二叉搜索树 | O(n) | O(n) | O(logn) |   O(n)  | O(logn) |   O(n)  | O(logn) |   O(n)  |
+|  AVL树 | O(n) | O(n) | O(logn) | O(logn) | O(logn) | O(logn) | O(logn) | O(logn) |
+|  红黑树  | O(n) | O(n) | O(logn) | O(logn) | O(logn) | O(logn) | O(logn) | O(logn) |
+
+## 红黑树的性质
+
+红黑树在满足二叉搜索树的要求外，还需满足如下要求：
+
+- 节点是红色或黑色。
+- 根是黑色。
+- 所有叶子都是黑色（叶子是NIL节点）。
+- 每个红色节点必须有两个黑色的子节点。（从每个叶子到根的所有路径上不能有两个连续的红色节点。）
+- 从任一节点到其每个叶子的所有简单路径都包含相同数目的黑色节点。
+
+## 图的基本术语
+
+- 简单图：一个图G如果不存在重复边，也不存在顶点到自身的边，则称图G为简单图。
+- 无向完全图：在无向图中，如果任意两个顶点之间都存在边，则称该图为无向完全图。含有n个顶点的无向完全图有n(n-1)/2条边。
+- 有向完全图：在有向图中，如果任意两个顶点之间都存在方向互为相反的两条弧，则称该图为有向完全图。含有n个顶点的有向完全图有n(n-1)条有向边。
+- 连通：在无向图中，若从顶点v到顶点w有路径存在，则称v和w是连通的。
+- 连通图：若图G中任意两个顶点都是连通的，则称图G为连通图。
+- 连通分量：无向图的极大连通字图称为连通分量。
+- 强连通图：在有向图中，若从顶点v到顶点w和从顶点w到顶点v之间都有路径，则称这两个顶点是强连通的。若图中任何一对顶点都是强连通的，则称此图为强连通图。
+- 强连通分量：有向图中的极大强连通字图称为有向图的强连通分量。
+- 生成树：连通图的生成树是包含图中全部顶点的一个极小连通字图。
