增加死锁产生的必要条件，完善计算机网络分层体系结构

--- a/操作系统.md
+++ b/操作系统.md
@@ -43,3 +43,12 @@
 - 地址空间和其他资源（如打开的文件）：进程的地址空间之间互相独立，同一进程的各线程间共享进程的资源，某进程内的线程对于其他进程不可见。
 
 - 通信方面：进程间通信(IPC)需要进程同步和互斥手段的辅助，以保证数据的一致性，而线程间可以直接读/写进程数据段（如全局变量）来进行通信。
+
+## 死锁产生的必要条件
+
+产生死锁必须同时满足以下四个条件，只要其中任一条件不成立，死锁就不会发生。
+
+- 互斥条件：进程要求对所分配的资源进行排他性控制，即在一段时间内某资源仅为一个进程所占有。此时若有其他进程请求该资源，则请求进程只能等待。
+- 不剥夺条件：进程所获得的资源在未使用完毕之前，不能被其他进程强行夺走，即只能由获得该资源的进程自己来释放。
+- 请求和保持条件：进程每次申请它所需要的一部分资源，在等待新资源的同时，进程继续占有已分配的资源。
+- 循环等待条件：存在一种进程资源的循环等待链，链中每一个进程已获得的资源同时被链中下一个进程所请求。
