--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -4,6 +4,16 @@
 
 ![Computer Network Architecture][computer_network_architecture]
 
+|   层级  |          功能         |                 协议                 |
+| :---: | :-----------------: | :--------------------------------: |
+|  应用层  | 文件传输、电子邮件、文件服务、虚拟终端 | TFTP、HTTP、SNMP、FTP、SMTP、DNS、Telnet |
+|  表示层  |   数据格式化、代码转换、数据加密   |                 ---                |
+|  会话层  |    解除或建立与别的节点的联系    |                 ---                |
+|  传输层  |       提供端对端的接口      |               TCP、UDP              |
+|  网络层  |       为数据报选择路由      |      IP、ICMP、RIP、OSPF、BGP、IGMP     |
+| 数据链路层 |   传输有地址的帧以及错误检测功能   |     SLIP、CSLIP、PPP、ARP、RARP、MTU    |
+|  物理层  |   以二进制数据形式在物理媒体上传输  |           ISO2110、IEEE802          |
+
 ## 数据进入协议栈时的封装
 
 ![Data Packet in Protocol Stack][data_packet_in_protocol_stack]
@@ -128,11 +138,11 @@ HTTP/<major>.<minor>
 
 ###### 代理请求首部
 
-|          首部         |                        描述                       |
-| :-----------------: | :---------------------------------------------: |
+|          首部         |                       描述                      |
+| :-----------------: | :-------------------------------------------: |
 |     Max-Forward     | 在通往源端服务器的路径上，将请求转发给其他代理或网关的最大次数——与TRACE方法一起使用 |
-| Proxy-Authorization |     与Authorization首部相同，但这个首部实在与代理进行认证的时候后使用的    |
-|   Proxy-Connection  |        与Connection首部相同，但这个首部是在与代理建立连接时使用的       |
+| Proxy-Authorization |    与Authorization首部相同，但这个首部实在与代理进行认证的时候后使用的   |
+|   Proxy-Connection  |       与Connection首部相同，但这个首部是在与代理建立连接时使用的      |
 
 ##### 响应首部
 
