增加MTU最小64B最大1518B的由来、IPv4分组格式

--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -22,6 +22,10 @@
 
 ![Tcp Communication][tcp_communication]
 
+[TCP 的那些事儿（上） | | 酷 壳 - CoolShell][tcp part 1 coolshell]
+
+[TCP 的那些事儿（下） | | 酷 壳 - CoolShell][tcp part 2 coolshell]
+
 ## HTTP报文
 
 ### HTTP请求报文
@@ -255,6 +259,18 @@ HTTP/<major>.<minor>
 
 如上所述
 
+## MTU最小64B最大1518B的由来
+
+在CSMA/CD下，每个节点在自己发送数据之后的一小段时间内，存在着遭遇冲突的可能性，只有经过争用期（以太网端到端的往返时延）这段时间还没有检测到冲突，才能确定这次发送不会发生冲突。而争用期为57.6us（以太网支持最大4个中继器，最长2500米），在10Mbps网络中，57.6us内能够传输576bit，即72B；去掉8B的前导符和帧开始符，以太网帧的最小长度是64B。
+
+由于线路质量差而引起的丢包，发生在大包的概率比小包的概率大得多，所以大包在丢包率较高的线路上不是一个好的选择；但如果选择一个较小的长度，传输效率又不高。如选择以太网长度为218B，则TCP payload = 218 - Ethernet Header - IP Header - TCP Header = 218 - 18 - 20 - 20 = 160B，有效传输率 = 160 / 218 = 73%；而如果选择长度为1518B，则有效传输率 = 1460/1518 = 96%。于是选取一个折中的长度：1518B；其对应的IP数据报长度为1500B。
+
+[车小胖谈网络：Ethernet Frame - 知乎专栏][ethernet frame]
+
+## IPv4分组格式
+
+![IPv4 Packet Structure][ipv4_packet_structure]
+
 [computer_network_architecture]: computer_network_architecture.png
 
 [data_packet_in_protocol_stack]: data_packet_in_protocol_stack.png
@@ -264,3 +280,11 @@ HTTP/<major>.<minor>
 [http_response_message]: http_response_message.png
 
 [tcp_communication]: tcp_communication.png
+
+[ethernet frame]: https://zhuanlan.zhihu.com/p/21318925
+
+[tcp part 1 coolshell]: http://coolshell.cn/articles/11564.html
+
+[tcp part 2 coolshell]: http://coolshell.cn/articles/11609.html
+
+[ipv4_packet_structure]: ipv4_packet_structure.png
