增加一些经典题目代码

--- a/常用代码.md
+++ b/常用代码.md
@@ -1004,3 +1004,58 @@ class LFUCache:
             self.memory_times[1] = node
             self.capacity -= 1
 ```
+
+# 经典题目
+
+## 计算数字二进制表示的1的个数
+
+![Leetcode 461. Hamming Distance][leetcode_461]
+
+```python
+def count_1s(num):
+    count = 0
+    while num:
+        num &= (num - 1)
+        count += 1
+    return count
+```
+
+## 数组中除一个数仅出现一次外，其他数均出现两次，找出这个数
+
+![Leetcode 136. Single Number][leetcode_136]
+
+```python
+def single_number(nums):
+    result = 0
+    for num in nums:
+        result ^= num
+    return result
+```
+
+## 长为n的数组中所有元素在[1, n]之间，元素最多出现两次，找出[1, n]中没出现的元素
+
+![Leetcode 448. Find All Numbers Disappeared in an Array][leetcode_448]
+
+```python
+def find_disappeared_numbers(nums):
+    """
+    :type nums: List[int]
+    :rtype: List[int]
+    """
+    for num in nums:
+        index = num if num > 0 else -num
+        index -= 1
+        if nums[index] > 0:
+            nums[index] = -nums[index]
+    result = []
+    for (index, num) in enumerate(nums):
+        if num > 0:
+            result.append(index + 1)
+    return result
+```
+
+[leetcode_461]: https://leetcode.com/problems/hamming-distance/#/description
+
+[leetcode_136]: https://leetcode.com/problems/single-number/#/description
+
+[leetcode_448]: https://leetcode.com/problems/find-all-numbers-disappeared-in-an-array/#/description
