增加单链表去重、斐波拉契数列

--- a/常用代码.md
+++ b/常用代码.md
@@ -282,6 +282,22 @@ def reverse_list(head):
     return new_head
 ```
 
+## 单链表去重
+
+```java
+public ListNode deleteDuplicates(ListNode head) {
+    ListNode p = head;
+    while (p != null) {
+        if (p.next != null && p.next.val == p.val) {
+            p.next = p.next.next;
+        } else {
+            p = p.next;
+        }
+    }
+    return head;
+}
+```
+
 # 二叉树遍历
 
 ## 二叉树前序遍历
@@ -1003,6 +1019,32 @@ class LFUCache:
             node.prev.next = node
             self.memory_times[1] = node
             self.capacity -= 1
+```
+
+# 斐波拉契数列
+
+## 自顶向下
+
+```python
+def fibonacci(n):
+    if n == 1 or n == 2:
+        return 1
+    return fibonacci(n - 1) + fibonacci(n - 2)
+```
+
+## 自底向上
+
+```python
+def fibonacci(n):
+    a = 1
+    b = 1
+    n -= 2
+    while n > 0:
+        temp = a + b
+        a = b
+        b = temp
+        n -= 1
+    return b
 ```
 
 # 经典题目
