增加一些链表相关算法

--- a/常用代码.md
+++ b/常用代码.md
@@ -298,6 +298,107 @@ public ListNode deleteDuplicates(ListNode head) {
 }
 ```
 
+## 合并两个链表
+
+```java
+public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
+    if (l1 == null) {
+        return l2;
+    }
+    if (l2 == null) {
+        return l1;
+    }
+    if (l1.val > l2.val) {
+        ListNode temp = l1;
+        l1 = l2;
+        l2 = temp;
+    }
+    ListNode p = l1;
+    while (p != null) {
+        while (l2 != null && (p.next == null || l2.val < p.next.val)) {
+            ListNode temp = l2;
+            l2 = l2.next;
+            temp.next = p.next;
+            p.next = temp;
+            p = p.next;
+        }
+        p = p.next;
+    }
+    return l1;
+}
+```
+
+## 检查回文链表
+
+```python
+def isPalindrome(head):
+    """
+    :type head: ListNode
+    :rtype: bool
+    """
+    if not head or not head.next:
+        return True
+    slow = head
+    fast = head
+    while fast and fast.next:
+        slow = slow.next
+        fast = fast.next.next
+    temp = None
+    while slow:
+        next = slow.next
+        slow.next = temp
+        temp = slow
+        slow = next
+    slow = temp
+    while head and slow:
+        if head.val != slow.val:
+            return False
+        head = head.next
+        slow = slow.next
+    return True
+```
+
+## 链表等概率随机抽取元素
+
+```java
+public int getRandom(ListNode head) {
+    ListNode node = head;
+    int result = -1;
+    int count = 1;
+    Random random = new Random();
+    while (node != null) {
+        if (random.nextInt(count) == 0) {
+            result = node.val;
+        }
+        count++;
+        node = node.next;
+    }
+    return result;
+}
+```
+
+## 链表按奇数序号和偶数序号重排
+
+```python
+def oddEvenList(head):
+    """
+    :type head: ListNode
+    :rtype: ListNode
+    """
+    if not head:
+        return None
+    odd = head
+    even = head.next
+    even_head = even
+    while even and even.next:
+        odd.next = odd.next.next
+        even.next = even.next.next
+        odd = odd.next
+        even = even.next
+    odd.next = even_head
+    return head
+```
+
 # 二叉树遍历
 
 ## 二叉树前序遍历
