--- a/常用代码.md
+++ b/常用代码.md
@@ -1197,8 +1197,726 @@ def find_disappeared_numbers(nums):
     return result
 ```
 
+## 不用`+`和`-`计算两个数的和
+
+![Leetcode 371. Sum of Two Integers][leetcode_371]
+
+```java
+public int getSum(int a, int b) {
+    int sum = a ^ b;
+    int part = a & b;
+    while (part != 0) {
+        int theA = sum;
+        int theB = part << 1;
+        sum = theA ^ theB;
+        part = theA & theB;
+    }
+    return sum;
+}
+```
+
+## 反转二叉树
+
+![Leetcode 226. Invert Binary Tree][leetcode_226]
+
+```python
+def invertTree(root):
+    """
+    :type root: TreeNode
+    :rtype: TreeNode
+    """
+    if root is None:
+        return
+    self.invertTree(root.left)
+    self.invertTree(root.right)
+    temp = root.left
+    root.left = root.right
+    root.right = temp
+    return root
+```
+
+## 把数组中所有0移动到尾部，数组元素保持相对顺序不变
+
+![Leetcode 283. Move Zeroes][leetcode_283]
+
+```java
+public void moveZeroes(int[] nums) {
+    int firstZeroIndex = 0;
+    while (firstZeroIndex < nums.length && nums[firstZeroIndex] != 0) {
+        firstZeroIndex++;
+    }
+    for (int i = 0; i < nums.length; i++) {
+        if (nums[i] != 0 && i > firstZeroIndex) {
+            nums[firstZeroIndex] = nums[i];
+            nums[i] = 0;
+            firstZeroIndex++;
+        }
+    }
+}
+```
+
+## 定义一次move是将长为n的数组中n-1个数均加1，最少多少个move可以使得数组中所有元素相等
+
+![Leetcode 453. Minimum Moves to Equal Array Elements][leetcode_453]
+
+```python
+def minMoves(nums):
+    """
+    :type nums: List[int]
+    :rtype: int
+    """
+    return sum(nums) - min(nums) * len(nums)
+```
+
+## 找出长为n的数组中出现次数大于⌊ n/2 ⌋的元素
+
+![Leetcode 169. Majority Element][leetcode_169]
+
+```python
+def majorityElement(nums):
+    """
+    :type nums: List[int]
+    :rtype: int
+    """
+    majority = None
+    count = 0
+    for num in nums:
+        if count == 0:
+            majority = num
+        if majority == num:
+            count += 1
+        else:
+            count -= 1
+    return majority
+```
+
+## 十进制转换为7进制
+
+![Leetcode 504. Base 7][leetcode_504]
+
+```python
+public String convertToBase7(int num) {
+    if (num == 0) {
+        return "0";
+    }
+    int sign = num >= 0 ? 1 : -1;
+    num = Math.abs(num);
+    StringBuilder builder = new StringBuilder();
+    while (num != 0) {
+        builder.append(num % 7);
+        num /= 7;
+    }
+    if (sign < 0) {
+        builder.append('-');
+    }
+    return builder.reverse().toString();
+}
+```
+
+## 指定长度二进制数，指定1的个数的所有可能情况
+
+![Leetcode 401. Binary Watch][leetcode_401]
+
+```python
+def get_combination(length, num_ones):
+    def combination(length, num_ones, base, result):
+        if num_ones == 0:
+            result.append(base)
+            return
+        if length == 0 or length < num_ones:
+            return
+        combination(length - 1, num_ones - 1, base + (1 << (length - 1)), result)
+        combination(length - 1, num_ones, base, result)
+
+    result = []
+    combination(length, num_ones, 0, result)
+    return result
+```
+
+## 有序数组转二叉搜索树
+
+![Leetcode 108. Convert Sorted Array to Binary Search Tree][leetcode_108]
+
+```java
+TreeNode toBST(int[] nums, int start, int end) {
+    if (start > end) {
+        return null;
+    }
+    int mid = (start + end) / 2;
+    TreeNode node = new TreeNode(nums[mid]);
+    node.left = toBST(nums, start, mid - 1);
+    node.right = toBST(nums, mid + 1, end);
+    return node;
+}
+
+public TreeNode sortedArrayToBST(int[] nums) {
+    if (nums.length == 0) {
+        return null;
+    }
+    return toBST(nums, 0, nums.length - 1);
+}
+```
+
+## 最大子数列问题
+
+![Leetcode 121. Best Time to Buy and Sell Stock][leetcode_121]
+
+### 最小值为0
+
+```python
+def max_subarray(nums):
+    max_ending_here = 0
+    max_so_far = 0
+    for x in nums:
+        max_ending_here = max(0, max_ending_here + x)
+        max_so_far = max(max_so_far, max_ending_here)
+    return max_so_far
+```
+
+### 最小值为负数
+
+```python
+def max_subarray(nums):
+    max_ending_here = nums[0]
+    max_so_far = nums[0]
+    for x in nums[1:]:
+        max_ending_here = max(x, max_ending_here + x)
+        max_so_far = max(max_so_far, max_ending_here)
+    return max_so_far
+```
+
+## 判断一个数是否为2的幂次
+
+![Leetcode 231. Power of Two][leetcode_231]
+
+```python
+def isPowerOfTwo(n):
+    """
+    :type n: int
+    :rtype: bool
+    """
+    return n > 0 and 0x80000000 % n == 0
+```
+
+## 判断一个数是否为4的幂次
+
+![Leetcode 342. Power of Four][leetcode_342]
+
+```python
+def isPowerOfFour(num):
+    """
+    :type num: int
+    :rtype: bool
+    """
+    return num > 0 and num & (num - 1) == 0 and num & 0x55555555 == num
+```
+
+## 最近公共祖先问题
+
+### 二叉树的最近公共祖先
+
+![Leetcode ][leetcode_]
+
+### 二叉搜索树的最近公共祖先
+
+![Leetcode 231. Power of Two][leetcode_231]
+
+```java
+public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+    while (root != null) {
+        if ((p.val < root.val && q.val > root.val)
+            || (p.val > root.val && q.val < root.val)
+            || p.val == root.val || q.val == root.val) {
+            return root;
+        }
+        if (p.val < root.val && q.val < root.val) {
+            root = root.left;
+        }
+        if (p.val > root.val && q.val > root.val) {
+            root = root.right;
+        }
+    }
+    return null;
+}
+```
+
+## 挑选数组中不连续的元素，使其和最大
+
+![Leetcode 198. House Robber][leetcode_198]
+
+```java
+public int rob(int[] nums) {
+    if (nums.length == 0) {
+        return 0;
+    }
+    int[] results = new int[nums.length + 1];
+    results[0] = 0;
+    results[1] = nums[0];
+    for (int i = 2; i <= nums.length; i++) {
+        results[i] = Math.max(nums[i - 1] + results[i - 2], results[i - 1]);
+    }
+    return results[nums.length];
+}
+```
+
+## 镜像二叉树
+
+![Leetcode 101. Symmetric Tree][leetcode_101]
+
+```python
+def isSymmetric(root):
+    """
+    :type root: TreeNode
+    :rtype: bool
+    """
+
+    def symmetric(left, right):
+        if not left and not right:
+            return True
+        if left and right and left.val == right.val:
+            return symmetric(left.left, right.right) and symmetric(left.right, right.left)
+        return False
+
+    if not root:
+        return True
+    return symmetric(root.left, root.right)
+```
+
+## 判断二叉树是否平衡
+
+![Leetcode 110. Balanced Binary Tree][leetcode_110]
+
+```python
+def isBalanced(root):
+    """
+    :type root: TreeNode
+    :rtype: bool
+    """
+
+    def balanced(root):
+        if not root:
+            return 0
+        left = balanced(root.left)
+        right = balanced(root.right)
+        if left == -1 or right == -1 or abs(left - right) > 1:
+            return -1
+        return 1 + max(left, right)
+
+    return balanced(root) != -1
+```
+
+## 二分法求平方根
+
+![Leetcode 367. Valid Perfect Square][leetcode_367]
+
+```java
+public int mySqrt(int x) {
+    if (x == 0) {
+        return 0;
+    }
+    int low = 1;
+    int high = x;
+    while (low <= high) {
+        int mid = (low + high) / 2;
+        if (mid <= x / mid) {
+            low = mid + 1;
+        } else {
+            high = mid - 1;
+        }
+    }
+    return low - 1;
+}
+```
+
+## n!求末尾0的个数
+
+![Leetcode 172. Factorial Trailing Zeroes][leetcode_172]
+
+```java
+public int trailingZeroes(int n) {
+    int result = 0;
+    long i = 5;
+    while (i <= n) {
+        result += n / i;
+        i *= 5;
+    }
+    return result;
+}
+```
+
+## 有序数组去重
+
+![Leetcode 26. Remove Duplicates from Sorted Array][leetcode_26]
+
+```python
+def removeDuplicates(nums):
+    """
+    :type nums: List[int]
+    :rtype: int
+    """
+    i = 0
+    j = 1
+    length = len(nums)
+    while j < length:
+        if nums[i] != nums[j]:
+            if (i + 1) == j:
+                i += 1
+                j += 1
+            else:
+                nums[i + 1] = nums[j]
+                i += 1
+                j += 1
+        else:
+            j += 1
+    return i if len(nums) == 0 else i + 1
+```
+
+## 链表判断环
+
+![Leetcode 141. Linked List Cycle][leetcode_141]
+
+```python
+def hasCycle(head):
+    """
+    :type head: ListNode
+    :rtype: bool
+    """
+    if not head:
+        return False
+    walker = head
+    runner = head.next
+    while walker and runner and runner.next:
+        walker = walker.next
+        runner = runner.next.next
+        if walker == runner:
+            return True
+    return False
+```
+
+## 判断是否为回文数
+
+![Leetcode 9. Palindrome Number][leetcode_9]
+
+```java
+public boolean isPalindrome(int x) {
+    if (x == 0) {
+        return true;
+    }
+    if (x < 0 || x % 10 == 0) {
+        return false;
+    }
+    int palindrome = 0;
+    while (palindrome < x) {
+        palindrome = palindrome * 10 + x % 10;
+        x /= 10;
+    }
+    return x == palindrome || x == palindrome / 10;
+}
+```
+
+## 是否存在二叉树根到叶子节点路径和为指定值
+
+![Leetcode 112. Path Sum][leetcode_112]
+
+```python
+def hasPathSum(root, sum):
+    """
+    :type root: TreeNode
+    :type sum: int
+    :rtype: bool
+    """
+    if root is None:
+        return False
+    if root.val == sum and root.left is None and root.right is None:
+        return True
+
+    return hasPathSum(root.left, sum - root.val) or hasPathSum(root.right, sum - root.val)
+```
+
+## 找出字符串中所有变位词
+
+![Leetcode 438. Find All Anagrams in a String][leetcode_438]
+
+```java
+public List<Integer> findAnagrams(String s, String p) {
+    List<Integer> list = new ArrayList<>();
+    if (s == null || s.length() == 0 || p == null || p.length() == 0) return list;
+    int[] hash = new int[256];
+    for (char c : p.toCharArray()) {
+        hash[c]++;
+    }
+    int left = 0, right = 0, count = p.length();
+    while (right < s.length()) {
+        if (hash[s.charAt(right)] >= 1) {
+            count--;
+        }
+        hash[s.charAt(right)]--;
+        right++;
+        if (count == 0) {
+            list.add(left);
+        }
+        if (right - left == p.length()) {
+            if (hash[s.charAt(left)] >= 0) {
+                count++;
+            }
+            hash[s.charAt(left)]++;
+            left++;
+        }
+    }
+    return list;
+}
+```
+
+## 判断两个字符串是否为同构字符串
+
+![Leetcode 205. Isomorphic Strings][leetcode_205]
+
+```java
+public boolean isIsomorphic(String s, String t) {
+    if (s.length() != t.length()) {
+        return false;
+    }
+    Map<Character, Integer> pattern = new HashMap<>();
+    Set<Character> exist = new HashSet<>();
+    for (int i = 0; i < s.length(); i++) {
+        boolean sExist = exist.contains(s.charAt(i));
+        boolean tExist = pattern.containsKey(t.charAt(i));
+        if (sExist && tExist) {
+            if (pattern.get(t.charAt(i)) + t.charAt(i) != s.charAt(i)) {
+                return false;
+            }
+        } else if (!sExist && !tExist) {
+            exist.add(s.charAt(i));
+            pattern.put(t.charAt(i), s.charAt(i) - t.charAt(i));
+        } else {
+            return false;
+        }
+    }
+    return true;
+}
+```
+
+## 判断一个数是否为其全部约数的和
+
+![Leetcode 507. Perfect Number][leetcode_507]
+
+```python
+def checkPerfectNumber(num):
+    """
+    :type num: int
+    :rtype: bool
+    """
+    if num == 1:
+        return False
+    result = 0
+    i = 2
+    while i * i <= num:
+        if num % i == 0:
+            result += i
+            result += num // i
+        i += 1
+    result += 1
+    return result == num
+```
+
+## 打乱数组元素
+
+![Leetcode 384. Shuffle an Array][leetcode_384]
+
+```java
+public void shuffle(int[] nums) {
+    int length = nums.length;
+    Random random = new Random();
+    for (int i = 0; i < length; i++) {
+        int swapIndex = random.nextInt(length);
+        int temp = nums[i];
+        nums[i] = nums[swapIndex];
+        nums[swapIndex] = temp;
+    }
+    return nums;
+}
+```
+
+## 生成不重复随机序列
+
+```java
+Random random = new Random();
+
+public int[] randomSequence(int n) {
+    int[] sequence = new int[n];
+    int[] result = new int[n];
+    for (int i = 0; i < n; i++) {
+        sequence[i] = i;
+    }
+    int last = n - 1;
+    for (int i = 0; i < n; i++) {
+        int index = random.nextInt(last + 1);
+        result[i] = sequence[index];
+        sequence[index] = sequence[last];
+        last--;
+    }
+    return result;
+}
+```
+
+## 使用随机生成0到5的函数，实现随机生成0到7的函数
+
+```java
+Random random = new Random();
+
+int random5(){
+    return random.nextInt(6);
+}
+int random7(){
+    while(true){
+        int temp1=random5();
+        int temp2=random5();
+        int n=temp1*6+temp2;
+        if(n<8){
+            return n;
+        }
+    }
+}
+```
+
+## 计算数组A、B、C、D中有多少种(i, j, k, l)使得A[i] + B[j] + C[k] + D[l] = 0
+
+![Leetcode 454. 4Sum II][leetcode_454]
+
+```python
+def fourSumCount(A, B, C, D):
+    """
+    :type A: List[int]
+    :type B: List[int]
+    :type C: List[int]
+    :type D: List[int]
+    :rtype: int
+    """
+    sumABDict = {}
+    for a in A:
+        for b in B:
+            sumAB = a + b
+            if sumAB not in sumABDict:
+                sumABDict[sumAB] = 0
+            sumABDict[sumAB] += 1
+    result = 0
+    for c in C:
+        for d in D:
+            sumCD = -c - d
+            if sumCD in sumABDict:
+                result += sumABDict[sumCD]
+    return result
+```
+
+## 计算给出的多个时间中，最小的时间差
+
+![Leetcode 539. Minimum Time Difference][leetcode_539]
+
+```java
+public int findMinDifference(List<String> timePoints) {
+    boolean[] mark = new boolean[24 * 60];
+    for (String time : timePoints) {
+        String[] t = time.split(":");
+        int h = Integer.parseInt(t[0]);
+        int m = Integer.parseInt(t[1]);
+        if (mark[h * 60 + m]) return 0;
+        mark[h * 60 + m] = true;
+    }
+    int prev = 0, min = Integer.MAX_VALUE;
+    int first = Integer.MAX_VALUE, last = Integer.MIN_VALUE;
+    for (int i = 0; i < 24 * 60; i++) {
+        if (mark[i]) {
+            if (first != Integer.MAX_VALUE) {
+                min = Math.min(min, i - prev);
+            }
+            first = Math.min(first, i);
+            last = Math.max(last, i);
+            prev = i;
+        }
+    }
+    min = Math.min(min, (24 * 60 - last + first));
+    return min;
+}
+```
+
+## 计算\[0, 10^n)中各位数字不同的数的个数
+
+![Leetcode 357. Count Numbers with Unique Digits][leetcode_357]
+
+```python
+def countNumbersWithUniqueDigits(n):
+    """
+    :type n: int
+    :rtype: int
+    """
+    if n == 0:
+        return 1
+    map = [None] * (n + 1)
+    map[1] = 10
+    for i in range(2, n + 1):
+        count = 9
+        for j in range(9 - i + 2, 10):
+            count *= j
+        map[i] = map[i - 1] + count
+    return map[n]
+```
+
 [leetcode_461]: https://leetcode.com/problems/hamming-distance/#/description
 
 [leetcode_136]: https://leetcode.com/problems/single-number/#/description
 
 [leetcode_448]: https://leetcode.com/problems/find-all-numbers-disappeared-in-an-array/#/description
+
+[leetcode_371]: https://leetcode.com/problems/sum-of-two-integers/#/description
+
+[leetcode_226]: https://leetcode.com/problems/invert-binary-tree/#/description
+
+[leetcode_283]: https://leetcode.com/problems/move-zeroes/#/description
+
+[leetcode_453]: https://leetcode.com/problems/minimum-moves-to-equal-array-elements/#/description
+
+[leetcode_169]: https://leetcode.com/problems/majority-element/#/description
+
+[leetcode_504]: https://leetcode.com/problems/base-7/#/description
+
+[leetcode_401]: https://leetcode.com/problems/binary-watch/#/description
+
+[leetcode_108]: https://leetcode.com/problems/convert-sorted-array-to-binary-search-tree/#/description
+
+[leetcode_121]: https://leetcode.com/problems/best-time-to-buy-and-sell-stock/#/description
+
+[leetcode_231]: https://leetcode.com/problems/power-of-two/#/description
+
+[leetcode_342]: https://leetcode.com/problems/power-of-four/#/description
+
+[leetcode_198]: https://leetcode.com/problems/house-robber/#/description
+
+[leetcode_101]: https://leetcode.com/problems/symmetric-tree/#/description
+
+[leetcode_110]: https://leetcode.com/problems/balanced-binary-tree/#/description
+
+[leetcode_367]: https://leetcode.com/problems/valid-perfect-square/#/description
+
+[leetcode_172]: https://leetcode.com/problems/factorial-trailing-zeroes/#/description
+
+[leetcode_26]: https://leetcode.com/problems/remove-duplicates-from-sorted-array/#/description
+
+[leetcode_141]: https://leetcode.com/problems/linked-list-cycle/#/description
+
+[leetcode_9]: https://leetcode.com/problems/palindrome-number/#/description
+
+[leetcode_112]: https://leetcode.com/problems/path-sum/#/description
+
+[leetcode_438]: https://leetcode.com/problems/find-all-anagrams-in-a-string/#/description
+
+[leetcode_205]: https://leetcode.com/problems/isomorphic-strings/#/description
+
+[leetcode_507]: https://leetcode.com/problems/perfect-number/#/description
+
+[leetcode_384]: https://leetcode.com/problems/shuffle-an-array/#/description
+
+[leetcode_454]: https://leetcode.com/problems/4sum-ii/#/description
+
+[leetcode_539]: https://leetcode.com/problems/minimum-time-difference/#/description
+
+[leetcode_357]: https://leetcode.com/problems/count-numbers-with-unique-digits/#/description
